--- a/datedialoglib/build.gradle
+++ b/datedialoglib/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -30,10 +30,10 @@ allprojects {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    implementation 'junit:junit:4.12'
 
     implementation 'com.github.ManTouBaby:MineLoaingAnimView:1.0.2'
     implementation 'com.android.support:cardview-v7:24.1.1'
